--- a/files/css/all.css
+++ b/files/css/all.css
@@ -1,4 +1,3 @@
-body {
-  color: #000;
-  font: 14px Helvetica, Arial, sans-serif;
-}
+/* --- [ Components ] --- */
+
+@import "components/contentEditable.css";
